fix(deploy): 誤ったファイルがキャッシュされ新しいバージョンにアップデートされない問題の修正

--- a/packages/backend/src/server/web/views/base.pug
+++ b/packages/backend/src/server/web/views/base.pug
@@ -63,7 +63,7 @@ html
 		style
 			include ../style.css
 
-		script(src=`/assets/boot.js?v=${version}`)
+		script(src=`/assets/boot.${version}.js`)
 
 	body
 		noscript: p
