--- a/packages/backend/src/server/web/views/bios.pug
+++ b/packages/backend/src/server/web/views/bios.pug
@@ -8,7 +8,7 @@ html
 		title Misskey Repair Tool
 		style
 			include ../bios.css
-		script(src=`/assets/bios.js?v=${version}`)
+		script(src=`/assets/bios.${version}.js`)
 
 	body
 		header
