--- a/packages/backend/src/server/web/views/cli.pug
+++ b/packages/backend/src/server/web/views/cli.pug
@@ -8,7 +8,7 @@ html
 		title Misskey Cli
 		style
 			include ../cli.css
-		script(src=`/assets/cli.js?v=${version}`)
+		script(src=`/assets/cli.${version}.js`)
 
 	body
 		header
